# tatam

./: Cargo.toml  README.md  TODO.md
docs/: advanced.md  documentation.md  examples.md  options.md  principle.md  semantics.md  syntax.md
docs/figures/: nuxmv_bug.tex
docs/files/: bmc.script  bug.smv  nuxmv_bug.tat
files/: bounded.tat  bug.tat  ex.tat  finite_1.tat  fun.tat  hotel.tat  infinite_1.tat  infinite_2.tat  initial_1.tat  int_loop_10_trace.tat  int_sum.tat  let.tat  property_1.tat  property_int.tat  sequence_1.tat  sequence_2.tat  simple.tat  test.tat  truncated_1.tat  vote.tat
files/docs/: principle.tat  types.tat
files/icfem_2024/: ring.tat  robot_fuel.tat
files/paper/: arith_10.tat  example.tat
files/presentation/: eau.tat  robot_simple.tat  robot_time.tat  skillset_custom.rl  skillset_state.tat  test.tat
files/tests/: bool.tat  complete.tat  eau.tat  enum.tat  int.tat  interval.tat  maisons.tat  parallel.tat  robot.tat  robot_time.tat  robot_transition.tat  rt.tat  scope.tat
files/tests/log/: log_0.smt  (+1 more)
src/: lib.rs
src/common/: file.rs  mod.rs
src/error/: entry.rs  error.rs  mod.rs  warning.rs
src/expr/: combine.rs  expr.rs  expression.rs  flatten.rs  is_same.rs  lang.rs  mod.rs  propagate.rs  resolve_expr.rs  resolve_type.rs  substitute.rs  time.rs  typing.rs
src/model/: declaration.rs  definition.rs  entry.rs  enumerate.rs  fun_dec.rs  fun_def.rs  initial.rs  interval.rs  invariant.rs  ltl_definition.rs  ltl_variable.rs  mod.rs  model.rs  parameter.rs  transition.rs  trigger.rs
src/parser/: grammar.lalrpop  mod.rs  parser.rs  position.rs
src/search/: mod.rs  optimization.rs  path_type.rs  search.rs  search_type.rs  transition_number.rs
src/solve/: incremental.rs  initial.rs  initial_optimize.rs  mod.rs  parallel.rs  parallel_optimize.rs  resolve.rs  resolve_finite.rs  resolve_infinite.rs  resolve_initial.rs  resolve_sequence.rs  resolve_smt.rs  resolve_truncated.rs  response.rs  sequence.rs  sequence_optimize.rs  smt.rs  smt_bool.rs  smt_bridge.rs  smt_datatype.rs  smt_int.rs  smt_real.rs  solution.rs  solver.rs  z3_solver.rs
src/typing/: mod.rs  typ.rs
vscode-extensions/tatam-lang/: CHANGELOG.md  README.md  package.json  vsc-extension-quickstart.md
(+1 files in other folders)
